# bgen_utils

./: .gitignore  CMakeLists.txt  Makefile.orig  README.md
src/: bgen_parser.hpp  calc_sample_var.cpp  class.h  data.cpp  data.hpp  eigen_utils.cpp  eigen_utils.hpp  file_utils.cpp  file_utils.hpp  main.cpp  parameters.hpp  parse_arguments.cpp  parse_arguments.hpp  utils.hpp
tests/: tests-main.cpp
unit/: test_sim_pheno.cpp  tests_main.cpp
unit/data/: age.txt  coeffs.txt  coeffs_shortened.txt  coeffs_w_snpid.txt  coeffs_w_snpid_w_gxe_2comp.txt  coeffs_w_snpid_w_gxe_effects.txt  coeffs_w_snpkey.txt  n50_p100.bgen  n50_p100.bgen.bgi  n50_p100_env_weights.txt  n50_p100_env_weights_2comp.txt  n50_p100_keys.txt  n50_p100_single_env.txt  n50_p100_snp_chunks.txt  sample_ids.txt  test_pheno1.txt  test_pheno1_predicted_effects.txt  test_pheno1_true_rescaled_coeffs.txt
